--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,14 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "imoveis = []\n",
     "\n",
-    "paginas = [1,2,3,4,5,6,7,8,9,10]\n",
     "\n",
     "for p in paginas:\n",
     "    headers = requests.utils.default_headers()\n",
@@ -55,7 +53,7 @@
     "        imovel = []\n",
     "\n",
     "        local = card.find('h2').text\n",
-    "        imovel.append(local.replace(' ',''))\n",
+    "        imovel.append(local.replace('            ','').replace('          ',''))\n",
     "\n",
     "        preco =card.find('p').find('strong').text\n",
     "        imovel.append(preco.replace('R$','').replace(' ','').replace('.',''))\n",
@@ -87,19 +85,109 @@
     "\n",
     "\n",
     "        imoveis.append(imovel)\n",
-    "    sleep(30)"
+    "    sleep(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('imoveis.csv', 'w',newline='', encoding='utf-8') as csvfile:\n",
-    "    writer = csv.writer(csvfile)\n",
-    "    writer.writerow(['local','preco','metragem','quartos','garagens','banheiros'])\n",
-    "    writer.writerows(imoveis)"
+    "def list_to_csv(list,file):\n",
+    "    with open(file, 'w',newline='', encoding='utf-8') as csvfile:\n",
+    "        writer = csv.writer(csvfile)\n",
+    "        writer.writerow(['local','preco','metragem','quartos','garagens','banheiros'])\n",
+    "        writer.writerows(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_page(s,p):\n",
+    "    headers = requests.utils.default_headers()\n",
+    "    headers.update({\n",
+    "        'User-Agent': 'Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0',\n",
+    "    })\n",
+    "\n",
+    "    link = requests.get(s.format(pagina=p), headers=headers)\n",
+    "\n",
+    "    if link.ok:\n",
+    "\n",
+    "        result = re.sub(r'<!.*?->','', link.content.decode(\"utf-8\"))\n",
+    "        result = result.replace('\\n','')\n",
+    "\n",
+    "        reddit1Content =BeautifulSoup(result,\"html.parser\")\n",
+    "\n",
+    "        cards = reddit1Content.find_all('div', class_='simple-card__box')\n",
+    "\n",
+    "        imoveis = []\n",
+    "        for card in cards:\n",
+    "            imovel = []\n",
+    "\n",
+    "            local = card.find('h2').text\n",
+    "            imovel.append(local.replace('            ','').replace('          ',''))\n",
+    "\n",
+    "            preco =card.find('p').find('strong').text\n",
+    "            imovel.append(preco.replace('R$','').replace(' ','').replace('.',''))\n",
+    "\n",
+    "            try:\n",
+    "                metragem = card.find(\"span\", itemprop=\"floorSize\").text\n",
+    "                imovel.append(metragem.replace('m²','').replace(' ',''))\n",
+    "            except:\n",
+    "                imovel.append('')\n",
+    "\n",
+    "            try:\n",
+    "                quartos = card.find(\"span\", itemprop=\"numberOfRooms\").text\n",
+    "                imovel.append(quartos.replace(' ',''))\n",
+    "            except:\n",
+    "                imovel.append('')\n",
+    "\n",
+    "            try:\n",
+    "                garagens = card.find(\"li\", class_=\"feature__item text-small js-parking-spaces\")\n",
+    "                garagens = garagens.find('span', class_=\"\").text\n",
+    "                imovel.append(garagens.replace(' ',''))\n",
+    "            except:\n",
+    "                imovel.append('')\n",
+    "\n",
+    "            try:\n",
+    "                banheiros = card.find(\"span\", itemprop=\"numberOfBathroomsTotal\").text\n",
+    "                imovel.append(banheiros.replace(' ',''))\n",
+    "            except:\n",
+    "                imovel.append('')\n",
+    "\n",
+    "            imoveis.append(imovel)\n",
+    "        \n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "    return imoveis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imoveis = []\n",
+    "\n",
+    "paginas = range(1,20)\n",
+    "\n",
+    "for p in paginas:\n",
+    "    i = get_page(SITE,p)\n",
+    "    \n",
+    "    if i == False:\n",
+    "        break\n",
+    "    \n",
+    "    imoveis += i\n",
+    "    sleep(10)\n",
+    "\n",
+    "list_to_csv(imoveis,'imoveis.csv')\n",
+    "    "
    ]
   }
  ],
