--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,72 +25,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "for p in paginas:\n",
-    "    headers = requests.utils.default_headers()\n",
-    "    headers.update({\n",
-    "        'User-Agent': 'Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0',\n",
-    "    })\n",
-    "\n",
-    "    link = requests.get(SITE.format(pagina=p), headers=headers)\n",
-    "    result = re.sub(r'<!.*?->','', link.content.decode(\"utf-8\"))\n",
-    "    result = result.replace('\\n','')\n",
-    "\n",
-    "    reddit1Content =BeautifulSoup(result,\"html.parser\")\n",
-    "\n",
-    "\n",
-    "    cards = reddit1Content.find_all('div', class_='simple-card__box')\n",
-    "\n",
-    "\n",
-    "    for card in cards:\n",
-    "        imovel = []\n",
-    "\n",
-    "        local = card.find('h2').text\n",
-    "        imovel.append(local.replace('            ','').replace('          ',''))\n",
-    "\n",
-    "        preco =card.find('p').find('strong').text\n",
-    "        imovel.append(preco.replace('R$','').replace(' ','').replace('.',''))\n",
-    "\n",
-    "        try:\n",
-    "            metragem = card.find(\"span\", itemprop=\"floorSize\").text\n",
-    "            imovel.append(metragem.replace('m²','').replace(' ',''))\n",
-    "        except:\n",
-    "            imovel.append('')\n",
-    "\n",
-    "        try:\n",
-    "            quartos = card.find(\"span\", itemprop=\"numberOfRooms\").text\n",
-    "            imovel.append(quartos.replace(' ',''))\n",
-    "        except:\n",
-    "            imovel.append('')\n",
-    "\n",
-    "        try:\n",
-    "            garagens = card.find(\"li\", class_=\"feature__item text-small js-parking-spaces\")\n",
-    "            garagens = garagens.find('span', class_=\"\").text\n",
-    "            imovel.append(garagens.replace(' ',''))\n",
-    "        except:\n",
-    "            imovel.append('')\n",
-    "\n",
-    "        try:\n",
-    "            banheiros = card.find(\"span\", itemprop=\"numberOfBathroomsTotal\").text\n",
-    "            imovel.append(banheiros.replace(' ',''))\n",
-    "        except:\n",
-    "            imovel.append('')\n",
-    "\n",
-    "\n",
-    "        imoveis.append(imovel)\n",
-    "    sleep(10)"
+    "#### Funções"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,8 +111,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Execução"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,8 +136,7 @@
     "    imoveis += i\n",
     "    sleep(10)\n",
     "\n",
-    "list_to_csv(imoveis,'imoveis.csv')\n",
-    "    "
+    "list_to_csv(imoveis,'imoveis.csv')"
    ]
   }
  ],
