--- a/main.ipynb
+++ b/main.ipynb
@@ -6,21 +6,26 @@
    "source": [
     "## Busca de Imóveis\n",
     "\n",
-    "Utilizar sites de corretoras para criar um dataset de imóveis de Curitiba"
+    "Utilizar sites de corretoras para criar um dataset de imóveis de Curitiba\n",
+    "\n",
+    "* Programação Concorrente"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup, Comment\n",
+    "from bs4 import BeautifulSoup\n",
     "import requests\n",
     "import re\n",
-    "from time import sleep\n",
     "import csv\n",
+    "from rateL import RateLimiter\n",
+    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+    "from tqdm import tqdm\n",
     "\n",
+    "RATE_LIMITER = RateLimiter(2)\n",
     "SITE = \"https://www.zapimoveis.com.br/venda/imoveis/pr+curitiba/?onde=,Paran%C3%A1,Curitiba,,,,,city,BR%3EParana%3ENULL%3ECuritiba,-25.437238,-49.269973,&pagina={pagina}&tipo=Im%C3%B3vel%20usado&transacao=Venda\""
    ]
   },
@@ -33,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +60,8 @@
     "    headers.update({\n",
     "        'User-Agent': 'Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0',\n",
     "    })\n",
+    "\n",
+    "    next(RATE_LIMITER)\n",
     "\n",
     "    link = requests.get(s.format(pagina=p), headers=headers)\n",
     "\n",
@@ -111,6 +118,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def thread_executor(pages):\n",
+    "    imoveis = []\n",
+    "\n",
+    "    threads= []\n",
+    "    erros = []\n",
+    "    with ThreadPoolExecutor(15) as executor:\n",
+    "        for p in pages:\n",
+    "            threads.append(executor.submit(get_page, SITE, p))\n",
+    "\n",
+    "        for task in tqdm(as_completed(threads),total=len(threads)):\n",
+    "                    if task.result() == False:\n",
+    "                        erros.append(task.result())\n",
+    "                    else:\n",
+    "                        imoveis += task.result()\n",
+    "                        \n",
+    "                    continue\n",
+    "    return imoveis"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -119,22 +151,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 11%|█         | 2/19 [00:05<00:47,  2.79s/it]\n"
+     ]
+    }
+   ],
    "source": [
-    "imoveis = []\n",
-    "\n",
-    "paginas = range(1,20)\n",
-    "\n",
-    "for p in paginas:\n",
-    "    i = get_page(SITE,p)\n",
-    "    \n",
-    "    if i == False:\n",
-    "        break\n",
-    "    \n",
-    "    imoveis += i\n",
-    "    sleep(10)\n",
+    "imoveis = thread_executor(range(1,20))\n",
     "\n",
     "list_to_csv(imoveis,'imoveis.csv')"
    ]
