--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +24,33 @@
     "from rateL import RateLimiter\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "from tqdm import tqdm\n",
+    "from unidecode import unidecode\n",
     "\n",
     "RATE_LIMITER = RateLimiter(2)\n",
     "SITE = \"https://www.zapimoveis.com.br/venda/imoveis/pr+curitiba/?onde=,Paran%C3%A1,Curitiba,,,,,city,BR%3EParana%3ENULL%3ECuritiba,-25.437238,-49.269973,&pagina={pagina}&tipo=Im%C3%B3vel%20usado&transacao=Venda\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bairros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('bairros.txt', 'r', encoding='utf-8') as f:\n",
+    "    \n",
+    "    bairros ={}\n",
+    "\n",
+    "    bs = f.read().splitlines()\n",
+    "\n",
+    "    for b in range(len(bs)):\n",
+    "        bairros[bs[b]] = b"
    ]
   },
   {
@@ -38,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def list_to_csv(list,file):\n",
     "    with open(file, 'w',newline='', encoding='utf-8') as csvfile:\n",
     "        writer = csv.writer(csvfile)\n",
-    "        writer.writerow(['local','preco','metragem','quartos','garagens','banheiros'])\n",
+    "        writer.writerow(['local','preco','metragem','quartos','garagens','banheiros',,'bairro'])\n",
     "        writer.writerows(list)"
    ]
   },
@@ -108,6 +132,9 @@
     "                imovel.append(banheiros.replace(' ',''))\n",
     "            except:\n",
     "                imovel.append('')\n",
+    "            \n",
+    "            bairro = define_bairro(local.replace('            ','').replace('          ',''))\n",
+    "            imovel.append(bairro)\n",
     "\n",
     "            imoveis.append(imovel)\n",
     "        \n",
@@ -115,6 +142,20 @@
     "        return False\n",
     "\n",
     "    return imoveis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def define_bairro(local):\n",
+    "    global bairros\n",
+    "    for bairro in bairros:\n",
+    "        if unidecode(bairro) in unidecode(local):\n",
+    "            return bairros.get(bairro)\n",
+    "    return -1"
    ]
   },
   {
