--- a/main.ipynb
+++ b/main.ipynb
@@ -69,7 +69,7 @@
     "def list_to_csv(list,file):\n",
     "    with open(file, 'w',newline='', encoding='utf-8') as csvfile:\n",
     "        writer = csv.writer(csvfile)\n",
-    "        writer.writerow(['local','preco','metragem','quartos','garagens','banheiros',,'bairro'])\n",
+    "        writer.writerow(['local','preco','metragem','quartos','garagens','banheiros','bairro'])\n",
     "        writer.writerows(list)"
    ]
   },
