--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,8 @@
     "from unidecode import unidecode\n",
     "\n",
     "RATE_LIMITER = RateLimiter(2)\n",
-    "SITE = \"https://www.zapimoveis.com.br/venda/imoveis/pr+curitiba/?onde=,Paran%C3%A1,Curitiba,,,,,city,BR%3EParana%3ENULL%3ECuritiba,-25.437238,-49.269973,&pagina={pagina}&tipo=Im%C3%B3vel%20usado&transacao=Venda\""
+    "#SITE = \"https://www.zapimoveis.com.br/venda/imoveis/pr+curitiba/?onde=,Paran%C3%A1,Curitiba,,,,,city,BR%3EParana%3ENULL%3ECuritiba,-25.437238,-49.269973,&pagina={pagina}&tipo=Im%C3%B3vel%20usado&transacao=Venda\"\n",
+    "SITE = \"https://www.zapimoveis.com.br/venda/casas/pr+curitiba/?onde=,Paran%C3%A1,Curitiba,,,,,city,BR%3EParana%3ENULL%3ECuritiba,-25.437238,-49.269973,%2Fvenda%2Fimoveis%2Fpr%2Bcuritiba%2F&tipoUnidade=Residencial,Casa&transacao=Venda&tipo=Im%C3%B3vel%20usado&pagina={pagina}\""
    ]
   },
   {
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,20 +63,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def list_to_csv(list,file):\n",
-    "    with open(file, 'w',newline='', encoding='utf-8') as csvfile:\n",
+    "    with open(file, 'a',newline='', encoding='utf-8') as csvfile:\n",
     "        writer = csv.writer(csvfile)\n",
-    "        writer.writerow(['local','preco','metragem','quartos','garagens','banheiros','bairro'])\n",
+    "        #writer.writerow(['local','preco','metragem','quartos','garagens','banheiros','bairro'])\n",
     "        writer.writerows(list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,15 +200,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 11%|█         | 2/19 [00:05<00:47,  2.79s/it]\n"
+      "100%|██████████| 100/100 [03:19<00:00,  2.00s/it]\n"
      ]
     }
    ],
    "source": [
-    "imoveis = thread_executor(range(1,20))\n",
+    "imoveis = thread_executor(range(500,600))\n",
     "\n",
     "list_to_csv(imoveis,'imoveis.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
